--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "lint": "eslint ."
   },
   "keywords": [
@@ -17,10 +17,27 @@
   "author": "Vijay vikram singh",
   "license": "MIT",
   "dependencies": {
-    "openai": "^3.2.1"
+    "dotenv": "^16.4.5",
+    "openai": "^3.3.0",
+    "retoolrpc": "^0.1.6"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
-    "eslint": "^8.40.0"
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-typescript": "^7.24.7",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.40.0",
+    "jest": "^29.7.0"
+  },
+  "jest": {
+    "transform": {},
+    "testEnvironment": "node",
+    "extensionsToTreatAsEsm": [],
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(retoolrpc)/)"
+    ]
   }
 }
