resolves type error openai

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aitools-retool-rpc",
   "version": "1.0.0",
-  "description": "A library to initiate RPC calls to Retool using OpenAI",
+  "description": "A library to use RPC  Retool for  OpenAI and other llm function calling",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -14,7 +14,7 @@
     "rpc",
     "api"
   ],
-  "author": "Vijay vikram singh",
+  "author": "Vijay Vikram Singh",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.5",
